fix full cards on firefox on missions and showcases

--- a/src/assets/css/organisms/card/_ff-card.scss
+++ b/src/assets/css/organisms/card/_ff-card.scss
@@ -68,4 +68,13 @@
     		top: -70px;
 		}
 	}
+
+	.card.full {
+		.card-info {
+			height: auto;
+		}
+		.info-bottom {
+			padding-bottom: 8rem;
+		}
+	}
 }
